tags/2013-08-29_cppreference/Archive/fe626d87a56376d9a2bd71d7c30b069a-ce6b7b81d29c30e32c78aebe6e642254/output
main.cpp:5:27: error: no viable conversion from 'int' to 'std::function<void ()>'
    std::function<void()> f = 17;
                          ^   ~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/functional:2210:7: note: candidate constructor not viable: no known conversion from 'int' to 'nullptr_t' for 1st argument
      function(nullptr_t) noexcept
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/functional:2221:7: note: candidate constructor not viable: no known conversion from 'int' to 'const std::function<void ()> &' for 1st argument
      function(const function& __x);
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/functional:2230:7: note: candidate constructor not viable: no known conversion from 'int' to 'std::function<void ()> &&' for 1st argument
      function(function&& __x) : _Function_base()
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/functional:2255:2: note: candidate template ignored: couldn't infer template argument ''
        function(_Functor);
        ^
1 error generated.
